# AoC-2022

./: .rustfmt.toml  Cargo.toml  README.md
src/types/: digit.rs  grid.rs  mod.rs
src/utils/: cmp.rs  error.rs  file.rs  iter.rs  mod.rs  parse.rs  test.rs
