[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
im-rc = "15.1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = { version = "0.4.0", features = ["num-bigint"] }
petgraph = { git = "https://github.com/petgraph/petgraph", rev = "6303db230a0a605512a76fdb18d2cadbc0f83e8b" }
regex = "1.7.0"
scan_fmt = "0.2.6"

[profile.release]
overflow-checks = true
